[gd_scene load_steps=2 format=3 uid="uid://c87eplpgowiob"]

[ext_resource type="Script" uid="uid://dbo8epnxmbjta" path="res://scripts/UI/StudentSelection.gd" id="1_vqok5"]

[node name="StudentSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vqok5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
text = "Quem est√° Jogando?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StudentListContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NewStudentInput" type="LineEdit" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Digite seu nome aqui"
alignment = 1

[node name="CreateStudentButton" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Criar e Entrar"

[node name="FeedbackLabel" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/CreateStudentButton" to="." method="_on_create_student_button_pressed"]
